tests/base/invalid/SetEmpty_CompileFail_1.whiley
import * from whiley.lang.*

void f(int x):
    sys.out.println(Any.toString(x))

void ::main(System.Console sys,[string] args):
    f({})
